refactor(fga): 重构权限搜索，封装请求对象并优化状态描述